--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -52,7 +52,7 @@ main {
 
 img {
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 30px;
   height: 30px;
   width: 30px;
 }
@@ -60,10 +60,9 @@ img {
 .output {
   display: inline-block;
   margin: auto;
-  margin-top: 30px;
-  margin-left: 10px;
   width: 140px;
   height: 60px;
+  font-size: 40px;
   color: #fff;
 }
 
